--- a/BAMXapp/Base.lproj/Main.storyboard
+++ b/BAMXapp/Base.lproj/Main.storyboard
@@ -1453,41 +1453,6 @@
                                     <constraint firstAttribute="width" constant="200" id="LeA-sQ-FPU"/>
                                 </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mab-Xn-gx9">
-                                <rect key="frame" x="70" y="569" width="200" height="41.5"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.and.ellipse" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Yq8-Vv-hQU">
-                                        <rect key="frame" x="0.0" y="-0.5" width="36.5" height="25.5"/>
-                                        <color key="tintColor" systemColor="labelColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="25" id="Bzy-L2-l43"/>
-                                        </constraints>
-                                    </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="2ae-iV-XWv">
-                                        <rect key="frame" x="46.5" y="0.0" width="153.5" height="41.5"/>
-                                        <subviews>
-                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="place" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxW-eA-0do">
-                                                <rect key="frame" x="0.0" y="0.0" width="153.5" height="14.5"/>
-                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2oj-dS-c9j">
-                                                <rect key="frame" x="0.0" y="14.5" width="153.5" height="27"/>
-                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
-                                                <state key="normal" title="Abrir en Maps">
-                                                    <color key="titleColor" name="bamx-red"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="didTapShowDirections:" destination="VHP-MN-cqA" eventType="touchUpInside" id="dAb-Y9-TnA"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="UJK-2j-Lnk"/>
-                                </constraints>
-                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="MGd-am-aTA">
                                 <rect key="frame" x="45" y="650.5" width="324" height="45"/>
                                 <subviews>
@@ -1522,6 +1487,41 @@
                                     <constraint firstAttribute="height" constant="45" id="7lo-Jk-hR9"/>
                                 </constraints>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mab-Xn-gx9">
+                                <rect key="frame" x="66" y="569" width="200" height="41.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.and.ellipse" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Yq8-Vv-hQU">
+                                        <rect key="frame" x="0.0" y="-0.5" width="36.5" height="25.5"/>
+                                        <color key="tintColor" systemColor="labelColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="Bzy-L2-l43"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="2ae-iV-XWv">
+                                        <rect key="frame" x="46.5" y="0.0" width="153.5" height="41.5"/>
+                                        <subviews>
+                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="place" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxW-eA-0do">
+                                                <rect key="frame" x="0.0" y="0.0" width="153.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2oj-dS-c9j">
+                                                <rect key="frame" x="0.0" y="14.5" width="153.5" height="27"/>
+                                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
+                                                <state key="normal" title="Abrir en Maps">
+                                                    <color key="titleColor" name="bamx-red"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="didTapShowDirections:" destination="VHP-MN-cqA" eventType="touchUpInside" id="dAb-Y9-TnA"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="UJK-2j-Lnk"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jlP-p1-f48"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1536,7 +1536,6 @@
                             <constraint firstItem="jlP-p1-f48" firstAttribute="trailing" secondItem="p4h-GN-4em" secondAttribute="trailing" constant="35" id="FbE-2a-60U"/>
                             <constraint firstItem="Mab-Xn-gx9" firstAttribute="top" secondItem="oUq-MZ-qQG" secondAttribute="bottom" constant="15" id="StL-Yw-1iK"/>
                             <constraint firstItem="JnI-L2-sFG" firstAttribute="top" secondItem="fs9-ye-OgS" secondAttribute="top" id="Y0D-Pw-cmt"/>
-                            <constraint firstItem="Mab-Xn-gx9" firstAttribute="leading" secondItem="jlP-p1-f48" secondAttribute="leading" constant="70" id="dXE-ia-9P5"/>
                             <constraint firstItem="MGd-am-aTA" firstAttribute="top" secondItem="Mab-Xn-gx9" secondAttribute="bottom" constant="40" id="dlH-Bd-1L2"/>
                             <constraint firstItem="iga-8i-r9e" firstAttribute="top" secondItem="JnI-L2-sFG" secondAttribute="bottom" constant="25" id="f2n-pk-C0U"/>
                             <constraint firstItem="jlP-p1-f48" firstAttribute="trailing" secondItem="MGd-am-aTA" secondAttribute="trailing" constant="45" id="ghC-gk-44C"/>
@@ -1548,6 +1547,7 @@
                             <constraint firstItem="oUq-MZ-qQG" firstAttribute="leading" secondItem="jlP-p1-f48" secondAttribute="leading" constant="70" id="pUb-o8-0SD"/>
                             <constraint firstItem="JnI-L2-sFG" firstAttribute="trailing" secondItem="jlP-p1-f48" secondAttribute="trailing" id="rtx-I1-bOt"/>
                             <constraint firstItem="Oun-BN-Jug" firstAttribute="leading" secondItem="jlP-p1-f48" secondAttribute="leading" constant="35" id="uIY-zy-IJk"/>
+                            <constraint firstItem="Mab-Xn-gx9" firstAttribute="leading" secondItem="jlP-p1-f48" secondAttribute="leading" constant="66" id="zWG-Io-Rab"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Cf2-nh-Kbx"/>
